<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/pref_username"
        android:inputType="text"
        android:key="@string/pref_username_key"
        android:singleLine="true"
        android:title="@string/pref_username_label"/>

    <EditTextPreference
        android:defaultValue="@string/pref_bloodtype"
        android:inputType="text"
        android:key="@string/pref_bloodtype_key"
        android:singleLine="true"
        android:title="@string/pref_bloodtype_label"/>

    <EditTextPreference
        android:defaultValue="@string/pref_city"
        android:inputType="text"
        android:key="@string/pref_city_key"
        android:singleLine="true"
        android:title="@string/pref_city_label"/>

    <ListPreference
        android:defaultValue="@string/pref_delay"
        android:key="@string/pref_delay_key"
        android:title="@string/pref_delay_label"
        android:entries="@array/pref_delay_option_labels"
        android:entryValues="@array/pref_delay_option_values"/>
</PreferenceScreen>