<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <EditText
            android:id="@+id/editText_new_contact_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="top"
            android:hint="@string/hint_new_contact_name" />

        <EditText
            android:id="@+id/editText_new_contact_phoneNumber"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_gravity="start|bottom"
            android:hint="@string/hint_new_contact_phoneNumber"
            android:inputType="phone" />

        <Button
            android:id="@+id/button_add_existing_contact"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|end"
            android:gravity="center"
            android:text="@string/button_existing_contact_add"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button_add_new_contact"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:onClick="addToContacts"
            android:text="@string/button_new_contact_add"
            android:textSize="15sp" />
    </FrameLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_contacts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp" />
</LinearLayout>
